Set the default shell

--- a/.github/workflows/linux_benchmark.yml
+++ b/.github/workflows/linux_benchmark.yml
@@ -104,12 +104,17 @@ jobs:
           # - NODE_VERSION: '0.10'
           #   NPM_VERSION: '>2.7.0 <4.0.0'
 
+    # Set defaults:
+    defaults:
+      run:
+        # Set the default shell to `bash`:
+        shell: bash --noprofile --norc -eo pipefail {0}
+
     # Define the sequence of job steps...
     steps:
 
       # Install compilers:
       - name: 'Install compilers'
-        shell: bash
         run: |
           sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
           sudo -E apt-get update -q
@@ -123,7 +128,6 @@ jobs:
 
       # Configure a virtual display server (needed for electron):
       - name: 'Configure virtual display server'
-        shell: bash
         run: |
           sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
           sudo /usr/bin/Xvfb "${{ env.DISPLAY }}" -screen 0 1280x768x24 > /dev/null 2>&1 &
@@ -138,7 +142,6 @@ jobs:
 
       # Print debug info:
       - name: 'Print debug info'
-        shell: bash
         run: |
           echo 'PATH:'
           echo $PATH
@@ -167,7 +170,6 @@ jobs:
 
       # Update the npm client (older clients cannot handle scoped modules):
       - name: 'Update npm'
-        shell: bash
         run: |
           npm install -g npm@"${{ matrix.NPM_VERSION }}"
           npm --version
@@ -189,14 +191,12 @@ jobs:
 
       # Perform install sequence (accounting for spurious installation errors, such as network timeouts, which can occasionally happen when running `npm install`):
       - name: 'Perform install sequence'
-        shell: bash
         run: |
           make install || make install
         timeout-minutes: 30
 
       # Run the build task:
       - name: 'Run build task'
-        shell: bash
         run: |
           chmod +x $GITHUB_WORKSPACE/tools/ci/github/script
           "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }} || "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }}
@@ -205,7 +205,6 @@ jobs:
       # View the log file if the previous step fails:
       - name: 'View log file'
         if: failure()
-        shell: bash
         run: |
           chmod +x $GITHUB_WORKSPACE/tools/ci/github/on_failure
           "$GITHUB_WORKSPACE/tools/ci/github/on_failure"
