--- a/.github/workflows/standalone_publish.yml
+++ b/.github/workflows/standalone_publish.yml
@@ -28,7 +28,7 @@ on:
 # Workflow jobs:
 jobs:
   publish:
-    # Define the type of virtual host machine on which to run the job:
+    # Define the type of virtual host machine:
     runs-on: ubuntu-latest
 
     # Define the sequence of job steps...
