--- a/.github/workflows/linux_test_cov.yml
+++ b/.github/workflows/linux_test_cov.yml
@@ -36,7 +36,7 @@ jobs:
     # Define a display name:
     name: "Node.js v${{ matrix.NODE_VERSION }}"
 
-    # Define the type of virtual host machine on which to run the job:
+    # Define the type of virtual host machine:
     runs-on: ${{ matrix.OS }}
 
     # Ensure that this job only runs if the antecedent workflow is successful:
