--- a/.github/workflows/macos_test.yml
+++ b/.github/workflows/macos_test.yml
@@ -60,11 +60,11 @@ jobs:
         # Define the list of build tasks:
         BUILD_TASK: ['test']
 
-        # Define the list of Node.js versions on which to run this job:
+        # Define the list of Node.js versions:
         # NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
         NODE_VERSION: ['16', '14', '12']
 
-        # Define the list of operating systems on which to run this job:
+        # Define the list of operating systems:
         OS: ['macOS-latest']
 
         # Define configuration options for each Node.js version:
