--- a/.github/workflows/macos_test_cov.yml
+++ b/.github/workflows/macos_test_cov.yml
@@ -65,10 +65,10 @@ jobs:
         # Define the list of build tasks:
         BUILD_TASK: ['test-coverage']
 
-        # Define the list of Node.js versions on which to run this job:
+        # Define the list of Node.js versions:
         NODE_VERSION: ['16', '14', '12']
 
-        # Define the list of operating systems on which to run this job:
+        # Define the list of operating systems:
         OS: ['macOS-latest']
 
         # Define configuration options for each Node.js version:
