--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -137,9 +137,9 @@ jobs:
       # Install Node.js:
       - name: 'Install Node.js'
         run: |
-          echo "NVS_HOME=$HOME/.nvs" >> $env:GITHUB_ENV
-          git clone https://github.com/jasongin/nvs "$NVS_HOME"
-          . "$NVS_HOME/nvs.sh" install
+          echo "NVS_HOME=$HOME/.nvs" >> $GITHUB_ENV
+          git clone https://github.com/jasongin/nvs "${{ env.NVS_HOME }}"
+          . "${{ env.NVS_HOME }}/nvs.sh" install
           nvs add ${{ matrix.NODE_VERSION }}
           nvs use ${{ matrix.NODE_VERSION }}
         timeout-minutes: 15
