--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -236,7 +236,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           chmod +x ./tools/ci/github/on_failure
-          "./tools/ci/github/on_failure"
+          "./tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 5
 
       # Upload the log file:
