Include Slack notification logic in each workflow

--- a/.github/workflows/macos_benchmark.yml
+++ b/.github/workflows/macos_benchmark.yml
@@ -33,8 +33,8 @@ on:
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for running benchmarks on macOS...
-  on-success:
+  # Define a job for running benchmarks on macOS...
+  benchmark:
 
     # Define a display name:
     name: "Node.js v${{ matrix.NODE_VERSION }}"
@@ -212,3 +212,58 @@ jobs:
           # Specify the number of days to retain the artifact (default is 90 days):
           retention-days: 5
         timeout-minutes: 10
+
+  # Define a job for sending notifications to Slack...
+  slack:
+
+    # Define a display name:
+    name: 'Slack notification'
+
+    # Define the type of virtual host machine:
+    runs-on: 'ubuntu-latest'
+
+    # Indicate that this job depends on the prior job finishing:
+    needs: benchmark
+
+    # Always run this job regardless of the outcome of the prior job:
+    if: always()
+
+    # Set defaults:
+    defaults:
+      run:
+        # Set the default shell to `bash`:
+        shell: bash --noprofile --norc -eo pipefail {0}
+
+    # Define the sequence of job steps...
+    steps:
+
+      # Resolve notification data:
+      - name: 'Resolve notification data'
+        run: |
+          echo "NOTIFICATION_STATUS=${{ needs.benchmark.result}}" >> $GITHUB_ENV
+          if [[ "${{ needs.benchmark.result }}" = "success" ]]; then
+            echo "NOTIFICATION_TEXT='**benchmark** workflow succeeded" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
+          elif [[ "${{ needs.benchmark.result }}" = "failure" ]]; then
+            echo "NOTIFICATION_TEXT='**benchmark** workflow failed" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
+          elif [[ "${{ needs.benchmark.result }}" = "cancelled" ]]; then
+            echo "NOTIFICATION_TEXT='**benchmark** workflow was canceled" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
+          else
+            exit 1
+          fi
+        timeout-minutes: 5
+
+      # Send notification to Slack:
+      - name: 'Send notification'
+        uses: 8398a7/action-slack@v3
+        if: success()
+        with:
+          status: "${{ env.NOTIFICATION_STATUS }}"
+          fields: repo,commit,message
+          text: "${{ env.NOTIFICATION_TEXT }}"
+          author_name: "${{ env.NOTIFICATION_AUTHOR_NAME }}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.REPO_SLACK_WEBHOOK_URL }}
+        timeout-minutes: 5
