--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -25,10 +25,13 @@ on:
     branches:
       - develop
 
+  # Allow the workflow to be manually run:
+  workflow_dispatch:
+
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for running unit tests on Linux...
+  # Define a job for running unit tests on Linux...
   test:
 
     # Define a display name:
@@ -187,12 +190,14 @@ jobs:
 
       # Perform install sequence (accounting for spurious installation errors, such as network timeouts, which can occasionally happen when running `npm install`):
       - name: 'Perform install sequence'
+        # TODO: move retry logic to GitHub script, similar to CircleCI
         run: |
           make install || make install
         timeout-minutes: 30
 
       # Run the build task:
       - name: 'Run build task'
+        # TODO: move retry logic to GitHub script, similar to CircleCI
         run: |
           chmod +x $GITHUB_WORKSPACE/tools/ci/github/script
           "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }} || "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }}
@@ -219,3 +224,58 @@ jobs:
           # Specify the number of days to retain the artifact (default is 90 days):
           retention-days: 5
         timeout-minutes: 10
+
+  # Define a job for sending notifications to Slack...
+  slack:
+
+    # Define a display name:
+    name: 'Slack notification'
+
+    # Define the type of virtual host machine:
+    runs-on: 'ubuntu-latest'
+
+    # Indicate that this job depends on the prior job finishing:
+    needs: test
+
+    # Always run this job regardless of the outcome of the prior job:
+    if: always()
+
+    # Set defaults:
+    defaults:
+      run:
+        # Set the default shell to `bash`:
+        shell: bash --noprofile --norc -eo pipefail {0}
+
+    # Define the sequence of job steps...
+    steps:
+
+      # Resolve notification data:
+      - name: 'Resolve notification data'
+        run: |
+          echo "NOTIFICATION_STATUS=${{ needs.test.result}}" >> $GITHUB_ENV
+          if [[ "${{ needs.test.result }}" = "success" ]]; then
+            echo "NOTIFICATION_TEXT='**test** workflow succeeded" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
+          elif [[ "${{ needs.test.result }}" = "failure" ]]; then
+            echo "NOTIFICATION_TEXT='**test** workflow failed" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
+          elif [[ "${{ needs.test.result }}" = "cancelled" ]]; then
+            echo "NOTIFICATION_TEXT='**test** workflow was canceled" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
+          else
+            exit 1
+          fi
+        timeout-minutes: 5
+
+      # Send notification to Slack:
+      - name: 'Send notification'
+        uses: 8398a7/action-slack@v3
+        if: success()
+        with:
+          status: "${{ env.NOTIFICATION_STATUS }}"
+          fields: repo,commit,message
+          text: "${{ env.NOTIFICATION_TEXT }}"
+          author_name: "${{ env.NOTIFICATION_AUTHOR_NAME }}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.REPO_SLACK_WEBHOOK_URL }}
+        timeout-minutes: 5
