--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -31,7 +31,7 @@ on:
 # Workflow jobs:
 jobs:
 
-  # Define a workflow for testing project installation on Windows...
+  # Define a job for testing project installation on Windows...
   test_npm_install:
 
     # Define a display name:
@@ -252,3 +252,58 @@ jobs:
           # Specify the number of days to retain the artifact (default is 90 days):
           retention-days: 5
         timeout-minutes: 10
+
+  # Define a job for sending notifications to Slack...
+  slack:
+
+    # Define a display name:
+    name: 'Slack notification'
+
+    # Define the type of virtual host machine:
+    runs-on: 'ubuntu-latest'
+
+    # Indicate that this job depends on the prior job finishing:
+    needs: test_npm_install
+
+    # Always run this job regardless of the outcome of the prior job:
+    if: always()
+
+    # Set defaults:
+    defaults:
+      run:
+        # Set the default shell to `bash`:
+        shell: bash --noprofile --norc -eo pipefail {0}
+
+    # Define the sequence of job steps...
+    steps:
+
+      # Resolve notification data:
+      - name: 'Resolve notification data'
+        run: |
+          echo "NOTIFICATION_STATUS=${{ needs.test_npm_install.result}}" >> $GITHUB_ENV
+          if [[ "${{ needs.test_npm_install.result }}" = "success" ]]; then
+            echo "NOTIFICATION_TEXT='**test_npm_install** workflow succeeded" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
+          elif [[ "${{ needs.test_npm_install.result }}" = "failure" ]]; then
+            echo "NOTIFICATION_TEXT='**test_npm_install** workflow failed" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
+          elif [[ "${{ needs.test_npm_install.result }}" = "cancelled" ]]; then
+            echo "NOTIFICATION_TEXT='**test_npm_install** workflow was canceled" >> $GITHUB_ENV
+            echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
+          else
+            exit 1
+          fi
+        timeout-minutes: 5
+
+      # Send notification to Slack:
+      - name: 'Send notification'
+        uses: 8398a7/action-slack@v3
+        if: success()
+        with:
+          status: "${{ env.NOTIFICATION_STATUS }}"
+          fields: repo,commit,message
+          text: "${{ env.NOTIFICATION_TEXT }}"
+          author_name: "${{ env.NOTIFICATION_AUTHOR_NAME }}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.REPO_SLACK_WEBHOOK_URL }}
+        timeout-minutes: 5
