--- a/.github/workflows/macos_test.yml
+++ b/.github/workflows/macos_test.yml
@@ -239,13 +239,13 @@ jobs:
         run: |
           echo "NOTIFICATION_STATUS=${{ needs.test.result}}" >> $GITHUB_ENV
           if [[ "${{ needs.test.result }}" = "success" ]]; then
-            echo "NOTIFICATION_TEXT='**test** workflow succeeded" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**test** workflow succeeded (macOS)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
           elif [[ "${{ needs.test.result }}" = "failure" ]]; then
-            echo "NOTIFICATION_TEXT='**test** workflow failed" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**test** workflow failed (macOS)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
           elif [[ "${{ needs.test.result }}" = "cancelled" ]]; then
-            echo "NOTIFICATION_TEXT='**test** workflow was canceled" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**test** workflow was canceled (macOS)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
           else
             exit 1
