--- a/.github/workflows/linux_benchmark.yml
+++ b/.github/workflows/linux_benchmark.yml
@@ -257,13 +257,13 @@ jobs:
         run: |
           echo "NOTIFICATION_STATUS=${{ needs.benchmark.result}}" >> $GITHUB_ENV
           if [[ "${{ needs.benchmark.result }}" = "success" ]]; then
-            echo "NOTIFICATION_TEXT='**benchmark** workflow succeeded" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**benchmark** workflow succeeded (linux)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
           elif [[ "${{ needs.benchmark.result }}" = "failure" ]]; then
-            echo "NOTIFICATION_TEXT='**benchmark** workflow failed" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**benchmark** workflow failed (linux)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
           elif [[ "${{ needs.benchmark.result }}" = "cancelled" ]]; then
-            echo "NOTIFICATION_TEXT='**benchmark** workflow was canceled" >> $GITHUB_ENV
+            echo "NOTIFICATION_TEXT='**benchmark** workflow was canceled (linux)'" >> $GITHUB_ENV
             echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
           else
             exit 1
