--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -238,7 +238,7 @@ jobs:
     # Indicate that this job depends on the prior job finishing:
     needs: test
 
-    # Always run this job regardless of the outcome of the prior job:
+    # Run this job regardless of the outcome of the prior job:
     if: always()
 
     # Set defaults:
