--- a/.github/workflows/linux_test_npm_install.yml
+++ b/.github/workflows/linux_test_npm_install.yml
@@ -229,7 +229,7 @@ jobs:
     # Indicate that this job depends on the prior job finishing:
     needs: test_npm_install
 
-    # Always run this job regardless of the outcome of the prior job:
+    # Run this job regardless of the outcome of the prior job:
     if: always()
 
     # Set defaults:
