--- a/.github/workflows/macos_benchmark.yml
+++ b/.github/workflows/macos_benchmark.yml
@@ -226,8 +226,8 @@ jobs:
     # Indicate that this job depends on the prior job finishing:
     needs: benchmark
 
-    # Always run this job regardless of the outcome of the prior job:
-    if: always()
+    # Run this job regardless of the outcome of the prior job:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     # Set defaults:
     defaults:
