--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -17,12 +17,12 @@
 #/
 
 contact_links:
+  - name: 👩‍🏫 Frequently Asked Questions
+    url:  https://github.com/stdlib-js/stdlib/blob/develop/FAQ.md
+    about: Consult the FAQ in case we have already answered your question there.
   - name: 💬 Question
     url:  https://gitter.im/stdlib-js/stdlib
-    about: Got a question? Ask us on Gitter! 🤗
-  - name: Frequently Asked Questions
-    url:  https://github.com/stdlib-js/stdlib/blob/develop/FAQ.md
-    about: Be sure to consult the FAQ in case we have already answered your question there.
+    about: Got a (non-bug related) question we haven't already answered? Ask us on Gitter! 🤗
   - name: 👏 Support Us
     url: https://github.com/stdlib-js/stdlib/blob/develop/docs/support_the_project.md
     about: Want to help support the project? 😍
