--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -147,14 +147,32 @@ jobs:
       # Install Node.js:
       - name: 'Install Node.js'
         run: |
+          echo 'Cloning NVS...'
           git clone https://github.com/jasongin/nvs "${{ env.NVS_HOME }}"
+          echo ''
+          echo 'Running NVS installation script...'
           . "${{ env.NVS_HOME }}/nvs.sh" install
+          echo ''
+          echo "Installing Node.js version ${{ matrix.NODE_VERSION }}..."
           nvs add ${{ matrix.NODE_VERSION }}
+          echo ''
+          echo 'Setting Node.js default executable...'
           nvs link ${{ matrix.NODE_VERSION }}
+          echo ''
+          echo "Activating Node.js version ${{matrix.NODE_VERSION }}..."
           nvs use ${{ matrix.NODE_VERSION }}
+          echo ''
+          echo 'Adding executable to PATH...'
           cygpath -u $(nvs which ${{ matrix.NODE_VERSION }}) >> $PATH
+          echo ''
+          echo 'PATH:'
+          echo $PATH
+          echo ''
+          echo 'Creating .bash_profile...'
           touch $HOME/.bash_profile
           echo "if [ -f $HOME/.bashrc ]; then . ~/.bashrc; fi" >> $HOME/.bash_profile
+          echo ''
+          echo 'Creating .bashrc...'
           touch $HOME/.bashrc
           echo ". ${{ env.NVS_HOME }}/nvs.sh" >> $HOME/.bashrc
         timeout-minutes: 15
