--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -161,16 +161,12 @@ jobs:
           echo ''
           echo "Activating Node.js version ${{matrix.NODE_VERSION }}..."
           nvs use ${{ matrix.NODE_VERSION }}
-          echo ''
-          echo 'Adding executable to PATH...'
-          cygpath -u $(nvs which ${{ matrix.NODE_VERSION }}) >> $GITHUB_PATH
         timeout-minutes: 15
 
       # Print debug info:
       - name: 'Print debug info'
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
           echo 'PATH:'
           echo $PATH
           echo ''
@@ -198,8 +194,7 @@ jobs:
       # Update the npm client (older clients cannot handle scoped modules):
       - name: 'Update npm'
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
           npm install -g npm@"${{ matrix.NPM_VERSION }}"
           npm --version
         timeout-minutes: 5
@@ -215,16 +210,14 @@ jobs:
       # [2]: https://github.com/nodejs/node-gyp#installation
       - name: 'Install Windows build tools'
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
           npm install --global --production windows-build-tools
         timeout-minutes: 5
 
       # Configure npm:
       - name: 'Configure npm'
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
           npm config set python "$USERPROFILE/.windows-build-tools/python38"
           npm config set msvs_version 2017
         timeout-minutes: 2
@@ -246,22 +239,16 @@ jobs:
       # Run the build task:
       - name: 'Run build task'
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
-          cd $GITHUB_WORKSPACE
-          chmod +x ./tools/ci/github/script
-          "./tools/ci/github/script" ${{ matrix.BUILD_TASK }} || "./tools/ci/github/script" ${{ matrix.BUILD_TASK }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
+          . "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 360
 
       # View the log file if the previous step fails:
       - name: 'View log file'
         if: failure()
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh"
-          nvs use ${{ matrix.NODE_VERSION }}
-          cd $GITHUB_WORKSPACE
-          chmod +x ./tools/ci/github/on_failure
-          "./tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
+          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
+          . "$GITHUB_WORKSPACE/tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 5
 
       # Upload the log file:
